# embedded-firmware-template

./: .clang-format  .clang-tidy  .editorconfig  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
app/motor_control/: motor_control.c
app/safety/: safety_monitor.c
app/state_machine/: motor_fsm.c
bsp/nucleo_f103rb/: board_init.c
config/boards/: nucleo_f103rb.cmake
docs/architecture/: software-architecture.md
docs/control-design/: control-loop-plan.md
docs/hardware/: bring-up-checklist.md
docs/verification/: test-strategy.md
drivers/startup/: startup_placeholder.s
hal/include/: motor_hal.h
hal/src/: motor_hal.c
platform/adc/: adc.c
platform/encoder/: encoder.c
platform/gpio/: gpio.c
platform/pwm/: pwm.c
platform/timer/: timer.c
platform/uart/: uart.c
